# pyjoysim

./: CLAUDE.md  GEMINI.md  README.md  main.py  pyproject.toml  runme.bat  test_3d_basic.py  test_advanced_simulations.py  test_drone_basic.py  test_drone_integration.py
.claude/: settings.local.json
docs/: TODO.md  TRD.md  development-roadmap.md  phase1-foundation.md  phase2-basic-simulations.md  phase3-advanced-features.md  phase4-completion.md
examples/: __init__.py  complete_demo.py  drone_demo.py  input_demo.py  physics_demo.py
examples/advanced/: 3d_demo.py
examples/basic/: bouncing_ball.py
examples/robot/: robot_arm_demo.py
examples/ui/: complete_ui_demo.py
examples/vehicle/: car_demo.py
pyjoysim/: __init__.py  main.py
pyjoysim/config/: __init__.py  config.py  settings.py
pyjoysim/core/: __init__.py  exceptions.py  logging.py
pyjoysim/input/: __init__.py  config_manager.py  hotplug.py  input_processor.py  joystick_manager.py  testing.py
pyjoysim/physics/: __init__.py  constraints.py  engine.py  objects.py  physics3d.py  world.py
pyjoysim/rendering/: __init__.py  camera.py  camera3d.py  engine.py  model_loader.py  renderer3d.py
pyjoysim/simulation/: __init__.py  base.py  manager.py
pyjoysim/simulation/drone/: __init__.py  drone_simulation.py  flight_controller.py  metadata.py  physics.py  sensors.py
pyjoysim/simulation/game/: __init__.py
pyjoysim/simulation/robot/: __init__.py  mobile_robot_simulation.py  robot_arm_simulation.py
pyjoysim/simulation/spaceship/: __init__.py  life_support.py  metadata.py  physics.py  propulsion.py  spaceship_simulation.py
pyjoysim/simulation/submarine/: __init__.py  ballast.py  metadata.py  physics.py  sonar.py  submarine_simulation.py
pyjoysim/simulation/vehicle/: __init__.py  car_simulation.py  track_system.py
pyjoysim/ui/: __init__.py  control_panel.py  main_window.py  overlay.py  settings_manager.py  simulation_selector.py  simulation_switcher.py
tests/: __init__.py
tests/integration/: test_3d_integration.py  test_rendering_integration.py  test_ui_integration.py
tests/unit/: test_car_simulation.py  test_rendering.py  test_robot_arm_simulation.py
